--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: regular;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -31,13 +31,6 @@ body {
   min-height: 100vh;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  /* padding: 2rem; */
-  /* text-align: center; */
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -59,8 +52,8 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #303030;
+    background-color: #fcfcfc;
   }
   a:hover {
     color: #747bff;
